--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
-# Your requirements go here
+cachetools==4.2.2
+colorful==0.5.4
+google-auth==2.1.0
+google-auth-oauthlib==0.4.6
+gspread==4.0.1
+oauthlib==3.1.1
+prettyprinter==0.18.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+requests-oauthlib==1.3.0
+rsa==4.7.2
